BFF pattern working
BFF pattern finally works. Now it's time to implement react login, logout and protected Routes functionality.